fix visibility

--- a/styles/quick-layout.less
+++ b/styles/quick-layout.less
@@ -21,3 +21,8 @@
     pointer-events: auto;
   }
 }
+
+// Hidden by default
+#quick-layout-four-columns, #quick-layout-grid-3x3 {
+  display: none;
+}
